# followifier

./: .gitignore  .project  README.md  docker-compose-no-backend.yml  docker-compose.yml  server.sh
board/: README.md
board/examples/: README.md
board/examples/echo-upper/: .cproject  .project  README.md
board/examples/echo-upper/client/: .cproject  .project  Makefile  sdkconfig
board/examples/echo-upper/client/main/: echo-upper.c
board/examples/echo-upper/server/: README.md  build.xml
board/examples/hash/: CMakeLists.txt  README.md  hash.c
board/examples/hash/main/: CMakeLists.txt  hash.c
board/examples/sntp/: README.md
board/examples/wifi-dump/: .cproject  .project  Makefile  README.md  sdkconfig  sdkconfig.old
board/examples/wifi-dump/main/: wifidump.c
board/followifier/: CMakeLists.txt  Makefile  README.md  run.sh  sdkconfig
board/followifier/main/: CMakeLists.txt  cmd_decl.h  cmd_sniffer.c  cmd_sniffer.h  flusher.c  flusher.h  followifier.c  hash.pb-c.c  hash.pb-c.h  hash.proto  message.pb-c.c  message.pb-c.h  simple_sniffer_example_main.c  sniffer.c  util.h
board/followifier/main/components/: flusher.c  flusher.h  nvs.c  nvs.h  sniffer.c  sniffer.h  sync.c  sync.h  watchdog.c  wifi.c  wifi.h
board/followifier/main/util/: conf.h  misc.c  misc.h
board/tests/echo-upper/: .autotools  .cproject  .project  Makefile  README.md  sdkconfig
board/tests/echo-upper/client/: .cproject
board/tests/echo-upper/client/main/: echo-upper.c
board/tests/echo-upper/main/: echo-upper.c
board/tests/echo-upper/server/: .project
board/tests/wifi-dump/: .cproject  .project  sdkconfig  sdkconfig.old
board/tests/wifi-dump/main/: wifi-dump.c  wifidump.c
common/: CMakeLists.txt  message.proto
core/: .classpath  README.md  database.db
core/Followifier/: App.xaml  App.xaml.cs  Followifier.csproj  Followifier.sln  MainWindow.xaml  MainWindow.xaml.cs
core/Followifier/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
core/examples/configuration/: ConfigurationScreen.Designer.cs  ConfigurationScreen.cs  Localizer.Designer.cs  Localizer.cs  Localizer.csproj  Localizer.sln  Program.cs
core/examples/configuration/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
core/examples/db/cs/: Database.sln
core/examples/db/cs/Database/: App.xaml  App.xaml.cs  Database.csproj  MainWindow.xaml  MainWindow.xaml.cs
core/examples/db/java/: database.db
core/examples/device_filtering/: Filterer.cs  Packet.cs  README.md  Test.cs  device_filtering.csproj  device_filtering.sln
core/examples/device_filtering/Properties/: AssemblyInfo.cs
core/examples/device_location/: Board.cs  Constants.cs  Device.cs  Point.cs  Station.cs  Test.cs  device_location.csproj  device_location.sln
core/examples/device_location/Properties/: AssemblyInfo.cs
core/examples/dummy_packets/: README.md  dummy_packet_producer.py  dummy_packet_producer_v2.py
core/examples/packet_replayer/: README.md  replayer.py
core/examples/packet_replayer/2019-12-12-14-34-40/: batch_b0_t0  batch_b0_t1  batch_b0_t2  batch_b0_t3  batch_b0_t4  batch_b0_t5  batch_b0_t6  batch_b1_t1  batch_b1_t2  batch_b1_t3  batch_b1_t4  batch_b1_t5  batch_b1_t6  batch_b2_t1  batch_b2_t2  batch_b2_t3  batch_b2_t4  batch_b2_t5  batch_b2_t6  config.json
core/examples/packet_replayer/2019-12-12-22-49-40/: README.md  batch_b0_t1  batch_b0_t5  batch_b1_t0  batch_b1_t2  batch_b2_t0  batch_b2_t2  batch_b2_t3
core/examples/packet_replayer/bigroom/fixed-avg-rssi/: README.md  batch_b0_t12  batch_b0_t19  batch_b0_t23  batch_b0_t25  batch_b0_t26  batch_b0_t3  batch_b0_t32  batch_b0_t5  batch_b1_t0  batch_b1_t11  batch_b1_t12  batch_b1_t13  batch_b1_t15  batch_b1_t20  batch_b1_t21  batch_b1_t22  batch_b1_t23  batch_b1_t25  batch_b1_t26  batch_b1_t31  batch_b1_t32  batch_b1_t33  batch_b1_t34  batch_b1_t5  batch_b1_t8  batch_b2_t11  batch_b2_t14  batch_b2_t19  batch_b2_t2  batch_b2_t20  batch_b2_t23  batch_b2_t24  batch_b2_t25  batch_b2_t27  batch_b2_t28  batch_b2_t29  batch_b2_t30  batch_b2_t31  batch_b2_t33  (+3 more)
core/examples/packet_replayer/smallroom/fixed-avg-rssi/: README.md  batch_b0_t0  batch_b0_t3  batch_b0_t4  batch_b1_t1  batch_b1_t4  batch_b1_t5  batch_b2_t1  batch_b2_t4  batch_b2_t5
core/examples/plot/: Plot.sln
core/examples/plot/Plot/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  Plot.csproj  ScatterExample.cs
core/examples/plot/Plot/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
core/server/: CMakeLists.txt  Dockerfile  README.md  compile.fish  compile.sh  config.json  docker_entry.sh  dummy_packet_producer.py  dummy_packet_producer_v2.py  message.pb.cc  message.pb.h  message.proto  message_pb2.py  protobuf_server.cpp  start.sh  start_server.sh
core/server/src/: CMakeLists.txt  board.cpp  board.h  calibration.cpp  calibration.h  connection.cpp  connection.h  database.cpp  database.h  debug.h  main.cpp  point.cpp  point.h  protobuf_server.cpp  receiver.cpp  receiver.h  room.cpp  room.h  server.cpp  server.h  settings.cpp  settings.h  statistics.cpp  statistics.h
core/server/src/server/: receiver.cpp  server.cpp  server.h
core/view/: README.md
frontend/: README.md  package-lock.json  package.json
frontend/interface/: package-lock.json  package.json
frontend/interface/src/: styles.scss
frontend/interface/src/app/: app.component.html  app.component.ts  app.module.ts  app.routes.ts
frontend/paper/: Dockerfile  README.md  angular.json  package-lock.json  package.json
frontend/paper/documentation/: tutorial-components.html
frontend/paper/documentation/css/: paper-dashboard.css
frontend/paper/documentation/js/: demo.js
frontend/paper/src/: index.html  main.ts  polyfills.ts  styles.css
frontend/paper/src/app/: app.module.ts
frontend/paper/src/app/model/: colors.ts  (+1 more)
frontend/reader/: Dockerfile  README.md  index.js  package-lock.json  package.json
frontend/src/: index.html  styles.scss
frontend/src/app/: app-routing.module.ts  app.module.ts  app.routes.ts  data.service.ts
frontend/src/app/model/: testModel.ts
(+57 files in other folders)
