include(FindProtobuf)
find_package(Protobuf REQUIRED)
if (Protobuf_FOUND)
    message(STATUS "Protobuf_INCLUDE_DIRS: ${Protobuf_INCLUDE_DIRS}")
    message(STATUS "Protobuf_LIBRARIES: ${Protobuf_LIBRARIES}")
    message(STATUS "Protobuf_VERSION: ${Protobuf_VERSION}")
    include_directories(${PROTOBUF_INCLUDE_DIR})
endif ()
protobuf_generate_cpp(PROTO_SRC PROTO_HEADER message.proto)
add_library(proto ${PROTO_HEADER} ${PROTO_SRC})
